--- a/index.ipynb
+++ b/index.ipynb
@@ -189,8 +189,8 @@
     }
    ],
    "source": [
-    "coutries[3]='mexico'\n",
-    "mexico"
+    "countries[3]='mexico'\n",
+    "countries"
    ]
   },
   {
