Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,22 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Italy'"
+       "['USA', 'Argentina', 'mexico']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors = countries[1-4]\n",
+    "kindof_neighbors = countries[1:4]\n",
     "kindof_neighbors"
    ]
   },
