--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "kindof_neighbors.append(\"Thailand\")"
    ]
   },
   {
