--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors.append(\"Malta\")"
+    "countries.append(\"Malta\")"
    ]
   },
   {
