--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors.append(\"Thailand\")"
+    "countries.append(\"Thailand\")"
    ]
   },
   {
