--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,7 @@
    },
    "outputs": [],
    "source": [
-    "countries[6]=USA # add code here"
+    "countries[6]=\"USA\" # add code here"
    ]
   },
   {
