--- a/index.ipynb
+++ b/index.ipynb
@@ -482,7 +482,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = le\n",
+    "num_of_repeats = len(uni)\n",
     "num_of_repeats # 3"
    ]
   },
